--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     book a trip, travel sites, travelocity, travel websites, cheap travel, travel photos, safari, safari africa, tours, national parks, tanzania, tour trips, zanzibar, hotel, tourist, welcome, visit Tanzania,
     
     ">
+     <meta name="google-site-verification" content="UMRPLlkT3w_OtWUdzNq4UkWi4S9pJjl2b3csLWw9KUs" />
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-KXGDZ29D');</script>
+<!-- End Google Tag Manager -->
 
 
     <!-- ===============================================-->
@@ -36,9 +44,22 @@
     <link href="assets/css/theme.css" rel="stylesheet" />
 
   </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-88QHQRB7CB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-88QHQRB7CB');
+</script>
 
   <body>
+       <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KXGDZ29D"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 
     <!-- ===============================================-->
     <!--    Main Content-->
